--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,46 @@
-Home<br/>
-<%= link_to "Web", web_index_path %><br/>
-<%= link_to "Branding", branding_index_path %><br/>
-<%= link_to "Seo", seo_index_path %><br/>
+<div id="header">
+	<div class="container">
+		<div class="padding">
+			<div class="top">
+				<img src="/assets/logo.png"/>
+				<div id="navbar">
+					<div class="navbar-option">
+						<%= link_to "about", seo_index_path %>
+					</div>
+					<div class="navbar-option">
+						<%= link_to "branding", branding_index_path %>
+					</div>
+					<div class="navbar-option">
+						<%= link_to "web", web_index_path %>
+					</div>
+				</div>
+				<div id="arm">
+					<img src="/assets/arm.png"/>
+				</div>
+			</div>
+			<h1>
+				Virtual &#60;body&#62; builders
+			</h1>
+			<p>
+				Summer is here - give your business the look that will turn heads. One of a kind web and branding services by a couple of hunky dudes.
+			</p>
+		</div>
+	</div>
+</div>
+<div id="whitespace"></div>
+<div id="content">
+	<div class="container">
+		<div class="padding" style="padding-top: 30px;">
+			<h2>
+				Your company is a work of art
+			</h2>
+			<div id="get-started">
+				Get Started
+			</div>
+			<p>
+				We approach every project as artists to express your identity as a mastepiece. Our recipe for _____ starts from scratch and blends your values with progressive design. Let us create your website and brandmark as a portrait of your business.
+			</p>
+			<hr/>
+		</div>
+	</div>
+</div>
