--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Cup</title>
-  <%= stylesheet_link_tag    "application" %>
+  <%= stylesheet_link_tag    "home" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
