As cross browser as possible?

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <div id="header">
 	<div class="container">
 		<div class="padding">
+			<div id="arm"></div>
 			<div class="top">
 				<img src="/assets/logo.png"/>
 				<div id="navbar">
@@ -13,9 +14,6 @@
 					<div class="navbar-option">
 						<%= link_to "web", web_index_path %>
 					</div>
-				</div>
-				<div id="arm">
-					<img src="/assets/arm.png"/>
 				</div>
 			</div>
 			<h1>
@@ -40,7 +38,17 @@
 			<p>
 				We approach every project as artists to express your identity as a mastepiece. Our recipe for _____ starts from scratch and blends your values with progressive design. Let us create your website and brandmark as a portrait of your business.
 			</p>
-			<hr/>
+		</div>
+		<div class="padding">
+			<h2>
+				Your company is a work of art
+			</h2>
+			<div id="get-started">
+				Get Started
+			</div>
+			<p>
+				We approach every project as artists to express your identity as a mastepiece. Our recipe for _____ starts from scratch and blends your values with progressive design. Let us create your website and brandmark as a portrait of your business.
+			</p>
 		</div>
 	</div>
 </div>
