--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -4,8 +4,9 @@ body {
 	padding:0;
 	text-align: center;
 	font-family: Helvetica;
-	overflow-x: hidden;
 	color: #fff;
+	background-color: #2c292a;
+	position: relative;
 }
 
 a {
@@ -20,13 +21,16 @@ h1, h2, h3, h4, h5, p {
 	text-align: left;
 	width: 1004px;
 	margin: auto;
-	position:relative;
 }
 
 .container .padding {
 	padding: 40px;
 	padding-left: 60px;
 	padding-right: 60px;
+}
+
+.container .padding + .padding {
+	border-top: solid 1px #c5c0b8;
 }
 
 #header{
@@ -54,28 +58,28 @@ h1, h2, h3, h4, h5, p {
 
 #header #arm {
 	position: absolute;
-	width:1px;
-	height:1px;
-	left: 520px;
-	top:0;
+	left: 50%;
+	top:40px;
+	right:0;
+	height: 414px;
+	z-index: 0;
+	background-image: url("/assets/arm.png");
 }
 
-#header #arm img {
-	position: relative;
-}
-
-#navbar {
-	float:right;
+#header #navbar {
+	position:absolute;
+	right:0;
+	top:24px;
+	z-index: 1;
 	font-size: 21px;
 }
 
-#navbar .navbar-option {
-	line-height: 73px;
+#header #navbar .navbar-option {
 	margin-right: 20px;
 	float:right;
 }
 
-#navbar .navbar-option a {
+#header #navbar .navbar-option a {
 	color: #fff;
 }
 
