--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,27 +28,57 @@
 <div id="whitespace"></div>
 <div id="content">
 	<div class="container">
-		<div class="padding" style="padding-top: 30px;">
-			<h2>
-				Your company is a work of art
-			</h2>
-			<div id="get-started">
-				Get Started
-			</div>
-			<p>
-				We approach every project as artists to express your identity as a mastepiece. Our recipe for _____ starts from scratch and blends your values with progressive design. Let us create your website and brandmark as a portrait of your business.
-			</p>
-		</div>
 		<div class="padding">
-			<h2>
-				Your company is a work of art
-			</h2>
-			<div id="get-started">
-				Get Started
+			<div class="section">
+				<div class="two-thirds">
+					<h2>
+						Your company is a work of art
+					</h2>
+					<div id="get-started">
+						Get Started
+					</div>
+					<p>
+						We approach every project as artists to express your identity as a mastepiece. Our recipe for _____ starts from scratch and blends your values with progressive design. Let us create your website and brandmark as a portrait of your business.
+					</p>
+				</div>
 			</div>
-			<p>
-				We approach every project as artists to express your identity as a mastepiece. Our recipe for _____ starts from scratch and blends your values with progressive design. Let us create your website and brandmark as a portrait of your business.
-			</p>
+			<div class="section">
+				<div class="one-third">
+					Image
+				</div>
+				<div class="two-thirds">
+					<table class="push-top">
+						<tr>
+							<td class="prl">
+								<h3>Web</h3>
+							</td>
+							<td class="pll">
+								<h3>Branding</h3>
+							</td>
+						</tr>
+						<tr>
+							<td class="prl">
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut eniim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comondo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.
+								</p>
+							</td>
+							<td class="pll">
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut eniim ad minim veniam, quis.
+								</p>
+							</td>
+						</tr>
+						<tr>
+							<td class="prl ptl">
+								<a class="btn">Learn More</a>
+							</td>
+							<td class="pll ptl">
+								<a class="btn">Learn More</a>
+							</td>
+						</tr>
+					</table>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
