--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,51 @@
 <div id="footer">
 	<div class="container">
 		<div class="padding">
-			Footer
+			<table>
+				<tr>
+					<td class="one-fourth">
+						<img class="small-logo" src="/assets/logo.png"/>
+						<p class="ptm" style="margin-bottom: 0">
+							@Cup of Hunks, LLC 2013<br/>
+							All rights reserved.
+						</p>
+					</td>
+					<td class="one-fourth">
+						<ul>
+							<li>
+								web
+							</li>
+							<li>
+								branding
+							</li>
+							<li>
+								about
+							</li>
+							<li>
+								clients
+							</li>
+							<li>
+								sitemap
+							</li>
+							<li>
+								terms + policies
+							</li>
+						</ul>
+					</td>
+					<td class="one-fourth">
+						<h1>847.651.8258</h1>
+						<h2 class="pbl">info@cupofhunks.com</h2>
+						<img class="mrs" src="/assets/fb.png"/>
+						<img class="mrs" src="/assets/twit.png"/>
+						<img src="/assets/linkedin.png"/>
+					</td>
+					<td class="one-fourth">
+						<div style="width:50px;margin:auto">
+							<img src="/assets/beans.png"/>
+						</div>
+					</td>
+				</tr>
+			</table>
 		</div>
 	</div>
 </div>
