centered learn more buttons

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -69,11 +69,11 @@
 							</td>
 						</tr>
 						<tr>
-							<td class="prl ptl">
-								<a class="btn">Learn More</a>
+							<td class="prl ptl" style="text-align:center;">
+								<a class="btn" style="margin:auto">Learn More</a>
 							</td>
-							<td class="pll ptl">
-								<a class="btn">Learn More</a>
+							<td class="pll ptl" style="text-align:center;">
+								<a class="btn" style="margin:auto">Learn More</a>
 							</td>
 						</tr>
 					</table>
