--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,13 +6,13 @@
 				<img src="/assets/logo.png"/>
 				<div id="navbar">
 					<div class="navbar-option">
-						<%= link_to "about", seo_index_path %>
+						<%= link_to "about", "#" %>
 					</div>
 					<div class="navbar-option">
-						<%= link_to "branding", branding_index_path %>
+						<%= link_to "branding", brandings_path %>
 					</div>
 					<div class="navbar-option">
-						<%= link_to "web", web_index_path %>
+						<%= link_to "web", websites_path %>
 					</div>
 				</div>
 			</div>
@@ -31,29 +31,31 @@
 		<div class="padding">
 			<div class="section">
 				<div class="two-thirds">
-					<h2>
+					<h1 style="margin-top:20px">
 						Your company is a work of art
-					</h2>
+					</h1>
 					<div id="get-started">
 						Get Started
 					</div>
 					<p>
-						We approach every project as artists to express your identity as a mastepiece. Our recipe for _____ starts from scratch and blends your values with progressive design. Let us create your website and brandmark as a portrait of your business.
+						We approach every project as artists to express your identity as a masterpiece. Our recipe for _____ starts from scratch and blends your values with progressive design. Let us create your website and brandmark as a portrait of your business.
 					</p>
 				</div>
 			</div>
 			<div class="section">
 				<div class="one-third">
-					Image
+					<div class="prl">
+						<img src="/assets/napkin.png"/>
+					</div>
 				</div>
 				<div class="two-thirds">
 					<table class="push-top">
 						<tr>
 							<td class="prl">
-								<h3>Web</h3>
+								<h2>Web</h2>
 							</td>
 							<td class="pll">
-								<h3>Branding</h3>
+								<h2>Branding</h2>
 							</td>
 						</tr>
 						<tr>
