--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
 			<table>
 				<tr>
 					<td class="one-fourth">
-						<img class="small-logo" src="/assets/logo.png"/>
+						<img src="/assets/logosmall.png"/>
 						<p class="ptm" style="margin-bottom: 0">
 							@Cup of Hunks, LLC 2013<br/>
 							All rights reserved.
@@ -40,7 +40,7 @@
 						<img src="/assets/linkedin.png"/>
 					</td>
 					<td class="one-fourth">
-						<div style="width:50px;margin:auto">
+						<div style="width:117px;margin:auto">
 							<img src="/assets/beans.png"/>
 						</div>
 					</td>
