--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<%= render :partial => "shared/navbar" %>
+<%= render :partial => "admin/navbar" %>
 
 <div id="content">
 	<div class="container">
