--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,23 +1,16 @@
 <div class="section">
 	<h1>Styled?</h1>
-	<div class="row">
-		<div class="project"></div>
-		<div class="project"></div>
-		<div class="project"></div>
-	</div>
-	<div class="row">
-		<div class="project"></div>
-		<div class="project"></div>
-		<div class="project"></div>
-	</div>
-	<div class="row">
-		<div class="project"></div>
-		<div class="project"></div>
-		<div class="project"></div>
-	</div>
-	<div class="row">
-		<div class="project"></div>
-		<div class="project"></div>
-		<div class="project"></div>
-	</div>
+	<% index = 0 %>
+	<% @brandings.each do |branding| %>
+		<% if index % 3 == 0 %>
+			<div class="row">
+		<% end %>
+				<div class="project">
+					<%= image_tag branding.photos.first.image.url(:small) %>
+				</div>
+		<% if index % 3 == 0 %>
+			</div>
+		<% end %>
+		<% index += 1 %>
+	<% end %>
 </div>
