--- a/app/views/admin/_navbar.html.erb
+++ b/app/views/admin/_navbar.html.erb
@@ -12,6 +12,11 @@
 					<div class="navbar-option">
 						<%= link_to "web", admin_websites_path %>
 					</div>
+					<div class="navbar-option">
+						<%= link_to root_path do %>
+							<div class="btn">visit your site</div>
+						<% end %>
+					</div>
 				</div>
 			</div>
 		</div>
