--- a/app/views/admin/websites/index.html.erb
+++ b/app/views/admin/websites/index.html.erb
@@ -1,1 +1,4 @@
-admin/web
+<%= link_to new_admin_website_path do %>
+	<div class="btn" style="float:right">add project</div>
+<% end %>
+<h1>Web</h1>
