--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,12 +1,11 @@
 <div class="section">
-	<h1>Styled?</h1>
 	<% index = 0 %>
-	<% @brandings.each do |branding| %>
+	<% @webites.each do |website| %>
 		<% if index % 3 == 0 %>
 			<div class="row">
 		<% end %>
 				<div class="project">
-					<%= image_tag branding.photos.first.image.url(:small) %>
+					<%= image_tag website.photos.first.image.url(:small) %>
 				</div>
 		<% if index % 3 == 0 %>
 			</div>
