--- a/app/views/admin/websites/index.html.erb
+++ b/app/views/admin/websites/index.html.erb
@@ -1,4 +1,34 @@
-<%= link_to new_admin_website_path do %>
-	<div class="btn" style="float:right">add project</div>
-<% end %>
-<h1>Web</h1>
+<div class="section">
+	<%= link_to new_admin_website_path do %>
+		<div class="btn" style="float:right">add project</div>
+	<% end %>
+	<h1 style="padding-top:5px;">Web</h1>
+	<% alternate = "odd" %>
+	<% @websites.each do |website| %>
+		<div class="list <%= alternate %>">
+			<table>
+				<tr>
+					<td>
+						<i class="icon-move"></i>
+					</td>
+					<td>
+						<%= image_tag website.photos.first.image.url(:thumb) %>
+					</td>
+					<td>
+						<%= website.title %>
+					</td>
+					<td class="small">
+						<%= link_to edit_admin_website_path(website) do %>
+							<i class="icon-edit"></i>
+						<% end %>
+					</td>
+					<td class="small">
+						<%= link_to [:admin, website], :confirm => "Delete #{branding.title}?", :method => :delete do %>
+							<i class="icon-remove"></i>
+						<% end %>
+					</td>
+				</tr>
+			</table>
+		</div>
+	<% end %>
+</div>
