--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,8 @@
 <div id="header">
 	<div class="container">
 		<div class="padding">
-			<div id="arm"></div>
+			<div id="arm">
+			</div>
 			<div class="top">
 				<img src="/assets/logo.png"/>
 				<div id="navbar">
