--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,7 @@
 	<div class="container">
 		<div class="padding">
 			<div id="arm">
+				<img style="margin-left:142px; margin-top:65.1px" src="/assets/steam.gif"/>
 			</div>
 			<div class="top">
 				<img src="/assets/logo.png"/>
@@ -39,7 +40,7 @@
 						Get Started
 					</div>
 					<p>
-						We approach every project as artists to express your identity as a masterpiece. Our recipe for _____ starts from scratch and blends your values with progressive design. Let us create your website and brandmark as a portrait of your business.
+						We approach every project as artists to express your identity as a masterpiece. Our recipe for customization starts from scratch and blends your values with progressive design. Let us create your website and brandmark as a portrait of your business.
 					</p>
 				</div>
 			</div>
