--- a/app/views/admin/brandings/index.html.erb
+++ b/app/views/admin/brandings/index.html.erb
@@ -11,7 +11,7 @@
 					<td>
 						<i class="icon-move"></i>
 					</td>
-					<td>
+					<td style="padding-left:15px">
 						<%= image_tag branding.photos.first.image.url(:thumb) %>
 					</td>
 					<td class="title">
