--- a/app/views/admin/brandings/index.html.erb
+++ b/app/views/admin/brandings/index.html.erb
@@ -8,10 +8,10 @@
 		<div class="list <%= alternate %>">
 			<table>
 				<tr>
-					<td>
+					<td class="drag">
 						<i class="icon-move"></i>
 					</td>
-					<td style="padding-left:15px">
+					<td class="image">
 						<%= image_tag branding.photos.first.image.url(:thumb) %>
 					</td>
 					<td class="title">
