--- a/app/assets/stylesheets/hunk.css
+++ b/app/assets/stylesheets/hunk.css
@@ -269,17 +269,17 @@ table.push-top td{
 }
 
 #content .container .padding .section .list table td.drag {
+	color: #A8A196;
 	font-size: 32px;
 }
 
 #content .container .padding .section .list table td.title {
-	font-weight: bold;
 	font-size:24px;
 	width: 600px;
 }
 
 #content .container .padding .section .list table td.image {
-	padding:0px;
+	padding-top:2px;
 	padding-left:15px;
 }
 
