--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -6,9 +6,11 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body style="background-color: #e7e2d9;">
 
 <%= render :partial => "admin/navbar" %>
+
+<%= render :partial => "admin/subnavbar" %>
 
 <div id="content">
 	<div class="container">
