--- a/app/views/admin/_navbar.html.erb
+++ b/app/views/admin/_navbar.html.erb
@@ -7,7 +7,7 @@
 				<% end %>
 				<div id="navbar">
 					<div class="navbar-option">
-						<%= link_to root_path do %>
+						<%= link_to destroy_admin_session_path, :method => :delete do %>
 							<div class="btn">
 								<i class="icon-signout"></i>
 							</div>
