--- a/app/assets/stylesheets/hunk.css
+++ b/app/assets/stylesheets/hunk.css
@@ -9,6 +9,14 @@ body {
 	position: relative;
 }
 
+.field input {
+	width: 100%;
+}
+
+.field textarea {
+	width: 100%;
+}
+
 a {
 	color: #fff;
 	text-decoration: none;
