can update more images

--- a/app/views/admin/brandings/_form.html.erb
+++ b/app/views/admin/brandings/_form.html.erb
@@ -28,7 +28,7 @@
         <label>Images</label><br/>
         <div class="field">
           <%= f.fields_for :photos do |p| %>
-            <%= p.file_field :image %>
+            <%= p.file_field :image, :class => "multiple-image" %>
           <% end %>
         </div>
         <br/>
@@ -45,11 +45,11 @@
   <% end %>
 </div>
 <script>
-  var image_count = 0;
+  var image_count = jQuery(".multiple-image");
   jQuery(document).ready(function(){
     jQuery(".add-image").click(function(){
-      image_count ++;
       var image = "<br/><div class='field'><input id='branding_photos_attributes_" + image_count + "_image' type='file' name='branding[photos_attributes][" + image_count + "][image]' />";
+      image_count ++;
       jQuery(".field:last").after(image);
     });
   });
