--- a/app/views/admin/brandings/_form.html.erb
+++ b/app/views/admin/brandings/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="section">
-  <%= form_for [:admin, @branding], :html => {:multipart => true} do |f| %>
+  <%= form_for [:admin, @branding], :html => {:multipart => true, :class => "submittable"} do |f| %>
     <% if @branding.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(@branding.errors.count, "error") %> prohibited this branding from being saved:</h2>
@@ -52,6 +52,10 @@
       var image = "<div class='field'><input id='branding_photos_attributes_" + image_count + "_image' type='file' name='branding[photos_attributes][" + image_count + "][image]' /><br/>";
       image_count ++;
       jQuery(".field:last").after(image);
+    });
+
+    jQuery(".submittable").submit(function() {
+      jQuery(this).parent().html("<img src='/assets/logo.png'/>");
     });
   });
 </script>
