--- a/app/views/admin/brandings/_form.html.erb
+++ b/app/views/admin/brandings/_form.html.erb
@@ -55,6 +55,7 @@
     });
 
     jQuery(".submittable").submit(function() {
+      jQuery(this).closest("form").submit();
       jQuery(this).parent().html("<img src='/assets/logo.png'/>");
     });
   });
