bowtie in footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -41,7 +41,7 @@
 					</td>
 					<td class="one-fourth">
 						<div style="width:117px;margin:auto">
-							<img src="/assets/beans.png"/>
+							<img src="/assets/bowtie.png"/>
 						</div>
 					</td>
 				</tr>
