edited web and branding paragraphs, added admin to footer

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,12 +63,12 @@
 						<tr>
 							<td class="prl">
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut eniim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea comondo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse.
+									Our web design capabilties are endless. Websites are created using the open source framework Ruby on Rails and we even offer database storage. Templates are not used and we assure a one of a kind website for every client.
 								</p>
 							</td>
 							<td class="pll">
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut eniim ad minim veniam, quis.
+									Whether you need just a logo or the whole package designed for your business we can provide you with the best look. Premium vector strategies and color palettes ensure scalability and usability. When it comes to design we hunks are strong believers that less is more.
 								</p>
 							</td>
 						</tr>
