--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,29 +6,32 @@
 					<td class="one-fourth">
 						<img src="/assets/logosmall.png"/>
 						<p class="ptm" style="margin-bottom: 0">
-							@Cup of Hunks, LLC 2013<br/>
+							© Cup of Hunks, LLC 2013<br/>
 							All rights reserved.
 						</p>
 					</td>
 					<td class="one-fourth">
 						<ul>
 							<li>
-								web
+								<a href="#">web</a>
 							</li>
 							<li>
-								branding
+								<a href="#">branding</a>
 							</li>
 							<li>
-								about
+								<a href="#">about</a>
 							</li>
 							<li>
-								clients
+								<a href="#">clients</a>
 							</li>
 							<li>
-								sitemap
+								<a href="#">terms + policies</a>
 							</li>
 							<li>
-								terms + policies
+								<a href="#">sitemap</a>
+							</li>
+							<li>
+								<a href="#">admin</a>
 							</li>
 						</ul>
 					</td>
