rode around and got it

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
 				Virtual &#60;body&#62; builders
 			</h1>
 			<p>
-				Summer is here - give your business the look that will turn heads. One of a kind web and branding services by a couple of hunky dudes.
+				Summer is here — give your business the look that will turn heads. One of a kind web and branding services by a couple of hunky dudes.
 			</p>
 		</div>
 	</div>
