add admin to footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -31,7 +31,7 @@
 								<a href="#">sitemap</a>
 							</li>
 							<li>
-								<a href="#">admin</a>
+								<a href="admin">admin</a>
 							</li>
 						</ul>
 					</td>
