adding javascript to display projects

--- a/app/views/admin/_navbar.html.erb
+++ b/app/views/admin/_navbar.html.erb
@@ -19,7 +19,7 @@
 						<% end %>
 					</div>
 					<div class="navbar-option">
-						Mike
+						<%= current_admin.first_name %>
 					</div>
 				</div>
 			</div>
