project js can work for any project

--- a/app/views/brandings/index.html.erb
+++ b/app/views/brandings/index.html.erb
@@ -4,7 +4,7 @@
 		<% if index % 3 == 0 %>
 			<div class="row">
 		<% end %>
-				<%= "<div class='project' data-id='#{branding.id}'>".html_safe %>
+				<%= "<div class='project' data-controller='#{controller_name}' data-id='#{branding.id}'>".html_safe %>
 					<%= image_tag branding.photos.first.image.url(:small) %>
 				</div>
 		<% if index % 3 == 2 %>
